Fix a lot of issues

--- a/src/assets/sass/app-exports.scss
+++ b/src/assets/sass/app-exports.scss
@@ -1,6 +1,6 @@
 @import './global/exports'; // IMPORT GLOBAL CONFIG
 
-@import './exports/animate.min.scss'; // IMPORT ANIMATE SCSS
+@import './imports/animate.min.scss'; // IMPORT ANIMATE SCSS
 
 @import './pages/exports'; // IMPORT SCSS OF ALL PAGES
 
