--- a/src/assets/sass/components/_navpages.scss
+++ b/src/assets/sass/components/_navpages.scss
@@ -10,7 +10,7 @@ body {
     align-items: center;
     flex-direction: column;
     overflow: hidden;
-    background-color: #111;
+    background-color: $color-secundary;
 }
 #logo-nav {
     width: 170px;
