--- a/src/assets/sass/global/_dark.scss
+++ b/src/assets/sass/global/_dark.scss
@@ -15,3 +15,6 @@ $color-primary-text-title:  #2FB485; // PRIMARY COLOR TO GENERIC TITLE (H1, H2, 
 
 /* ------------------ OTHERS COLORS >>> */
 $color-select-circle: #1DA;
+$color-background-img: #216B51;
+$color-hide-text: #6A706A;
+$color-form-bk: #343E3B;
