--- a/src/assets/sass/components/_about.scss
+++ b/src/assets/sass/components/_about.scss
@@ -2,14 +2,14 @@
     width: 90%;
     display: flex;
     flex-direction: column;
-    color: #FFF;
+    color: $color-primary-text;
 }
 
 #about-box h1 {
     text-align: center;
-    font-family: 'Courgette', cursive;
+    font-family: $primary-font;
     font-size: 2.2em;
-    color: #2FB485;
+    color: $color-primary-text-title;
     font-weight: 400;
 }
 
@@ -20,7 +20,7 @@
     overflow-y: auto;
     text-align: justify;
     font-size: 0.875em;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $desc-font;
 }
 
 #about-box p::-webkit-scrollbar-track {
@@ -39,7 +39,7 @@
     border-radius: 1.5px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: #2FB485;
+    background-color: $color-primary-text-title;
 }
 @media (min-width: 20.5em) {
     #about-box p {
