--- a/src/assets/sass/components/_gallery.scss
+++ b/src/assets/sass/components/_gallery.scss
@@ -1,8 +1,8 @@
 #title-gallery {
     text-align: center;
-    font-family: 'Courgette', cursive;
+    font-family: $primary-font;
     font-size: 2em;
-    color: #2FB485;
+    color: $color-primary-text-title;
     margin-bottom: 10px;
     font-weight: 400;
 }
@@ -19,11 +19,11 @@
     width: 90px;
     height: 90px;
     margin:4px;
-    background-color: #216B51;
+    background-color: $color-background-img;
     display: flex;
     justify-content: center;
     align-items: center;
-    border:1px solid #2FB485;
+    border:1px solid $color-primary-text-title;
     border-radius: 5px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.4)
 }
@@ -44,7 +44,7 @@
     border-radius: 1.5px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: #2FB485;
+    background-color: $color-primary-text-title;
 }
 
 @media (min-width: 20.5em) {
