--- a/src/assets/sass/components/_showimg.scss
+++ b/src/assets/sass/components/_showimg.scss
@@ -45,7 +45,7 @@
     max-width: 100%;
     max-height: 325px;
     border-radius: 2px;
-    border: 1px solid #2FB485;
+    border: 1px solid $color-primary-text-title;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.4);
 }
 #img-detail #img-describe {
@@ -60,10 +60,10 @@
 #img-detail #img-describe p {
     padding-right: 3px;
     overflow-y: auto;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $desc-font;
     font-size: 0.82em;
     text-align: justify;
-    color: #E6F2EE;
+    color: $color-primary-text;
 }
 #img-detail #img-describe p::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -81,7 +81,7 @@
     border-radius: 1.5px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: #2FB485;
+    background-color: $color-primary-text-title;
 }
 @media (min-width: 20.5em) {
     #img-detail #close {
