--- a/src/assets/sass/global/_global.scss
+++ b/src/assets/sass/global/_global.scss
@@ -6,7 +6,11 @@
 body {
     min-width:100vw;
     min-height:100vh;
-    background-image:$color-secundary-bk;
+    //background-image:$color-secundary-bk;
+    overflow: hidden;
+    @include breakpoint (small) {
+        overflow: auto;
+    }
 }
 a {
     text-decoration: none;
