--- a/src/assets/sass/components/_form.scss
+++ b/src/assets/sass/components/_form.scss
@@ -4,6 +4,12 @@
     font-size: 2em;
     color: $color-primary-text-title;
     font-weight: 400;
+    @include breakpoint (tiny) {
+        font-size: 2.2em;
+    }
+    @include breakpoint (medium) {
+        font-size: 3em;
+    }
 }
 #form {
     width: 100%;
@@ -18,6 +24,16 @@
     margin: 15px 0px 5px 13%;
     font-size: 1em;
     align-self: start;
+    @include breakpoint (tiny) {
+        font-size: 1.1em;
+    }
+    @include breakpoint (smaller) {
+        font-size: 1.25em;
+    }
+    @include breakpoint (medium) {
+        font-size: 1.75em;
+        margin-left: 10%;
+    }
 }
 #form input {
     width: 85%;
@@ -30,6 +46,12 @@
     font-family: $desc-font;
     font-size: 1em;
     color:$color-primary-text;
+    @include breakpoint (tiny) {
+        height: 50px;
+    }
+    @include breakpoint (medium) {
+        height: 60px;
+    }
 }
 #form input::placeholder {
     font-family: $desc-font;
@@ -46,7 +68,15 @@
     font-family: $desc-font;
     font-size: 1em;
     color:#E6F2EE;
-    
+    @include breakpoint (tiny) {
+        height: 105px;
+    }
+    @include breakpoint (smaller) {
+        height: 195px;
+    }
+    @include breakpoint (special-phone) {
+        height: 270px;
+    }
 }
 #form span {
     font-family: $desc-font;
@@ -54,6 +84,13 @@
     margin-top: 3px;
     margin-left: 15%;
     align-self: start;
+    @include breakpoint (tiny) {
+        font-size: 0.8em;
+    }
+    @include breakpoint (medium) {
+        font-size: 0.865em;
+        margin-left: 10%;
+    }
 }
 #form button {
     width: 200px;
@@ -68,45 +105,22 @@
     align-self: center;
     -webkit-box-shadow: 0px 3px 10px 3px rgba(0, 0, 0, 0.6);
     box-shadow: 0px 3px 10px 3px rgba(0, 0, 0, 0.6);
+    &:active {
+        -webkit-box-shadow: none;
+                box-shadow: none;
+        -webkit-transition-duration: 150ms;
+                transition-duration: 150ms;
+    }
+    @include breakpoint (medium) {
+        width: 250px;
+        height: 68px;
+        margin-top: 30px;
+        border-radius: 34px;
+        font-size: 2.5em;
+    }
 }
 input:focus, textarea:focus, button:focus {
     box-shadow: 0 0 0 0;
     border: 2px solid $color-select-circle;
     outline: 0;
 }
-@media (min-width: 20.5em) {
-    #title-form {
-        font-size: 2.2em;
-    }
-    #form label {
-        font-size: 1.1em;
-    }
-    #form input {
-        height: 50px;
-    }
-    #form textarea{
-        height: 105px;
-    }
-    #form span { 
-        font-size: 0.8em;
-    }
-}
-@media (min-width: 25.465em) {
-    #form textarea {
-        height: 195px;
-    }
-    #form label {
-        font-size: 1.25em;
-    }
-}
-@media (min-height: 50.7em) {
-    #form textarea {
-        height: 270px;
-    }
-}
-#form button:active {
-    -webkit-box-shadow: none;
-            box-shadow: none;
-    -webkit-transition-duration: 150ms;
-            transition-duration: 150ms;
-  }
