--- a/src/assets/sass/components/_gallery.scss
+++ b/src/assets/sass/components/_gallery.scss
@@ -5,14 +5,35 @@
     color: $color-primary-text-title;
     margin-bottom: 10px;
     font-weight: 400;
+    @include breakpoint (tiny) {
+        margin-bottom: 15px;
+    }
+    @include breakpoint (medium) {
+        font-size: 3em;
+    }
 }
 
 #gallery {
-    height: 355px;
+    height: auto;
+    max-height: 355px;
     overflow-y: auto;
     display: grid;
     grid-template-columns: auto auto auto;
     grid-template-rows: auto;
+    @include breakpoint (tiny) {
+        max-height: 400px;
+    }
+    @include breakpoint (smaller) {
+        max-height: 500px;
+    }
+    @include breakpoint (special-phone) {
+        max-height: 560px;
+    }
+    @include breakpoint (medium) {
+        max-height: 700px;
+        grid-template-columns: repeat(5, auto);
+        grid-template-rows: auto;
+    }
 }
 
 #gallery .img {
@@ -25,7 +46,12 @@
     align-items: center;
     border:1px solid $color-primary-text-title;
     border-radius: 5px;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.4)
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.4);
+    @include breakpoint (tiny) {
+        width: 105px;
+        height: 105px;
+        margin:5px;
+    }
 }
 
 #gallery::-webkit-scrollbar-track {
@@ -45,28 +71,4 @@
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: $color-primary-text-title;
-}
-
-@media (min-width: 20.5em) {
-    #title-gallery { 
-        margin-bottom: 15px;
-    }
-    #gallery {
-        height: 400px;
-    } 
-    #gallery .img {
-        width: 105px;
-        height: 105px;
-        margin:5px;
-    }
-}
-@media (min-width: 25.465em) {
-    #gallery {
-        height: 500px;
-   }
-}
-@media (min-height: 50.7em) {
-   #gallery {
-        height: 560px;
-   }
 }
