--- a/src/assets/sass/components/_navpages.scss
+++ b/src/assets/sass/components/_navpages.scss
@@ -12,6 +12,21 @@ body {
     overflow: hidden;
     background-color: $color-secundary;
 }
+#component-navpage {
+    width: 100%;
+    min-height: 70%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    @include breakpoint (special-phone) {
+        min-height: 75%;
+    }
+    @include breakpoint (medium) {
+        min-height: 80%; 
+    }
+    
+}
 #logo-nav {
     width: 170px;
     margin-top: 10px;
@@ -20,6 +35,10 @@ body {
         width: 211px;
         margin-top: 15px;
         margin-left: 29px;  
+    }
+    @include breakpoint (medium) {
+        width: 265px;
+        //margin-bottom: 0.5%;
     }
 }
 #arrowBack {
@@ -34,12 +53,21 @@ body {
         left: 25px;
         top: 40px;
     }
+    @include breakpoint (medium) {
+        width: 45px;
+        height: 45px;
+        top: 30px;
+        left: 30px;
+    }
 }
 #container-nav #social-midia-nav {
     margin-top: 35px;
     margin-bottom: 10px;
     @include breakpoint (special-phone) {
         margin-top: 45px;  
+    }
+    @include breakpoint (medium) {
+        height: 30px;
     }
 }
 #container-nav #social-midia-nav ul li {
