--- a/src/assets/sass/pages/_home.scss
+++ b/src/assets/sass/pages/_home.scss
@@ -1,10 +1,7 @@
 * {margin: 0 auto; padding: 0 auto; box-sizing: border-box;}
-body {
-   overflow: hidden;
-}
 #container {
     width: 100%;
-    height: 101vh;
+    height: 100vh;
 }
 #logo {
     width: 200px;
@@ -28,7 +25,7 @@ body {
 }
 #left-side {
     width: 74.5%;
-    height: 101vh;
+    min-height: 100%;
     float: left;
     background-image: $color-primary-bk;
     @include breakpoint (tiny) {
@@ -40,7 +37,7 @@ body {
 }
 #right-side {
     width: 25.5%;
-    height: 101vh;
+    min-height: 100%;
     display: flex;
     float: right;
     background-image: $color-secundary-bk;
@@ -73,7 +70,7 @@ body {
         margin-top: 130px;
     }
     @include breakpoint (medium) {
-        width: 53.73%;
+        width: 60%;
         margin-left: 23.13%;
     }
 }
@@ -109,7 +106,7 @@ body {
         font-size: 0.92em;
     }
     @include breakpoint (medium) {
-        height: 445px;
+        height: 425px;
         font-size: 1.125em;
     }
 }
@@ -126,6 +123,7 @@ body {
         margin-bottom: 10px;
     }
 }
+/* ---------- REFATORAR URGENTE ---------- */
 #right-side #arrow-select {
     width: 13px;
     padding-left: 1px;
@@ -134,11 +132,17 @@ body {
         width: 14px;
         margin-top: 253px;
     }
+    @include breakpoint (medium) {
+        margin-top: 265px;
+    }
 }
 #right-side #arrow-select img {
     width:10px;
     @include breakpoint (tiny) {
         width: 13px;
+    }
+    @include breakpoint (medium) {
+        width: 18px;
     }
 }
 #arrow-select-1 {
@@ -147,12 +151,18 @@ body {
     @include breakpoint (tiny) {
         margin-top: 89px;
     }
+    @include breakpoint (medium) {
+        margin-top: 111px;
+    }
 }
 #right-side #eng-circle {
     width: 92px;
     margin-top: 190px;
     @include breakpoint (tiny) {
         margin-top: 222px;
+    }
+    @include breakpoint (medium) {
+        width: 130px;
     }
 }
 #right-side #eng-circle .eng-click {
@@ -190,6 +200,7 @@ body {
         font-size: 1.1em;
     }
 }
+/* ----------------- FIM ----------------- */
 #left-side #index-txt #social-midia {
     width: 115px;
     height: 25px;
@@ -200,12 +211,19 @@ body {
         margin-top: 0px;
         width: 130px;
     }
+    @include breakpoint (medium)  {
+        width: 150px; 
+    }
 }
 #left-side #index-txt #social-midia a .social {
     width: 20px;
     margin-left: 7px;
     @include breakpoint (tiny) {
         width: 23px;
+    }
+    @include breakpoint (medium)  {
+        width: 28px;
+        margin-left: 9px;
     }
 }
 #btn-orc {
@@ -215,6 +233,9 @@ body {
     margin-top: 5px;
     justify-content: center;
     align-items: center;
+    @include breakpoint (medium) {
+        margin-top: 50px;
+    }
 }
 #btn-orc #btn-orcamento {
     width: 202px;
@@ -258,8 +279,8 @@ body {
         display: block; 
     } 
     @include breakpoint (medium) {
-        width: 375px;
-        left: calc(50% - 187.5px)
+        width: 325px;
+        left: calc(50% - 210px)
     }
 }
 // ------ NAV ------ //
@@ -270,6 +291,9 @@ body {
     left: 0px;
     z-index: 2;
     background: rgba(0, 0, 0, 0.95);
+    @include breakpoint (medium) {
+        width: 35%;
+    }
 }
 #container #side-nav ul {
     margin-top: 77px;
@@ -277,6 +301,10 @@ body {
     font-size: 2em;
     font-family: $secundary-font;
     border-top: 1.5px solid $color-primary-text;
+    @include breakpoint (medium) {
+        font-size: 2.5em;
+        margin-top: 95px;
+    }
 }
 #container  #side-nav ul li {
     text-decoration: none;
@@ -292,6 +320,9 @@ body {
     &:active {
         color: $color-primary;
     }
+    @include breakpoint (medium) {
+        height: 70px; 
+    }
 }
 #container #side-nav footer {
     width: 100%;
@@ -301,7 +332,11 @@ body {
     color: $color-hide-text;
     font-size: 0.65em;
     text-align: center;
+    @include breakpoint (medium) {
+        font-size: 0.8em;
+    }
 }
+
 .hideClass {
     display: none;
 }
